syntax = "proto3";

package pb;

option go_package = "barbershop/src/pb/barber";

message UploadImageRequest {
    string file_name = 1;
    bytes image_data = 2;
}

message UploadImageResponse {
    string image_url = 1;
    string message = 2;
}